Fix border radius cutoff in flipping cards

--- a/src/App.css
+++ b/src/App.css
@@ -209,9 +209,9 @@ h2.home-banner-text {
   perspective: 1000px;
 }
 
-.flip-card * {
+.flip-card > * {
   border-radius: 1rem;
-  background-color: white;
+  background-color: white;;
 }
 
 .flip-card-inner {
@@ -238,6 +238,8 @@ h2.home-banner-text {
 
 .flip-card-back {
   transform: rotateY(180deg);
+  background-color: white;
+  border-radius: 1rem;
 }
 
 /* News.js */
